attempt to fix text being too big on some tags

--- a/css/SpecialTags-Monster.css
+++ b/css/SpecialTags-Monster.css
@@ -284,6 +284,8 @@
   height: auto;
   width: auto;
   color: #fff;
+  font-size: 12px;
+  font-weight: 700;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
@@ -295,6 +297,8 @@
   height: auto;
   width: auto;
   color: #fff;
+  font-size: 12px;
+  font-weight: 700;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
@@ -306,6 +310,8 @@
   height: auto;
   width: auto;
   color: #fff;
+  font-size: 12px;
+  font-weight: 700;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
@@ -317,6 +323,8 @@
   height: auto;
   width: auto;
   color: #fff;
+  font-size: 12px;
+  font-weight: 700;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
